in-tree/lua-integration/tests/compile_fail/enum_on_struct.rs
use lua_integration::LuaKind;

#[derive(LuaKind)]
pub struct ShouldFail {
    field: i32,
}

fn main() {}
